python-django (1.8.1-1) UNRELEASED; urgency=medium

  * New major upstream release:
    https://docs.djangoproject.com/en/1.8/releases/1.8/
    https://docs.djangoproject.com/en/1.8/releases/1.8.1/
  * Refresh all patches.
  * Drop 03_manpage.diff, merged upstream.

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 20 May 2015 09:54:47 +0200

python-django (1.7.7-1) unstable; urgency=high

  * New upstream security and bugfix release:
    https://www.djangoproject.com/weblog/2015/mar/18/security-releases/
    It fixes:
    - CVE-2015-2317: possible XSS attack via user-supplied redirect URLs
      Closes: #780873
    - CVE-2015-2316: Denial-of-service possibility with strip_tags()
      Closes: #780874

 -- Raphaël Hertzog <hertzog@debian.org>  Mon, 23 Mar 2015 20:41:13 +0100

python-django (1.7.6-1) unstable; urgency=high

  * New upstream security release:
    https://www.djangoproject.com/weblog/2015/mar/09/security-releases/
  * Fixes CVE-2015-2241: XSS attack via properties in
    ModelAdmin.readonly_fields

 -- Raphaël Hertzog <hertzog@debian.org>  Mon, 09 Mar 2015 21:40:34 +0100

python-django (1.7.5-1) unstable; urgency=medium

  [ Chris Lamb ]
  * Remove myself from Uploaders.

  [ Raphaël Hertzog ]
  * New upstream bugfix release:
    https://docs.djangoproject.com/en/1.7/releases/1.7.5/

 -- Raphaël Hertzog <hertzog@debian.org>  Fri, 06 Mar 2015 21:13:54 +0100

python-django (1.7.4-1) unstable; urgency=medium

  * Release to unstable and hopefully to Jessie too.

 -- Raphaël Hertzog <hertzog@debian.org>  Mon, 09 Feb 2015 10:39:15 +0100

python-django (1.7.4-1~exp1) experimental; urgency=medium

  * New upstream bugfix release.
  * Drop fix-24193-python34-test-failure.diff, merged upstream.

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 28 Jan 2015 09:38:24 +0100

python-django (1.7.3-1~exp1) experimental; urgency=high

  [ Luke Faraone ]
  * New upstream security release.
    - WSGI header spoofing via underscore/dash conflation (CVE-2015-0219)