@@ -1,1 +1,1 @@
-docs.debian/_build/html
+docs/_build/html
